@@ -1,8 +1,8 @@
 Package: memisc
 Type: Package
 Title: Management of Survey Data and Presentation of Analysis Results
-Version: 0.99.27.2
-Date: 2020-11-01
+Version: 0.99.27.3
+Date: 2020-11-18
 Author: Martin Elff (with contributions from Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, Achim Zeileis)
 Maintainer: Martin Elff <memisc@elff.eu>
 Description: An infrastructure for the management of survey data including
@@ -23,6 +23,6 @@ URL:
         http://www.elff.eu/software/memisc/,https://github.com/melff/memisc/
 BugReports: https://github.com/melff/memisc/issues
 NeedsCompilation: yes
-Packaged: 2020-11-02 20:32:27 UTC; elff
+Packaged: 2020-11-18 20:38:39 UTC; elff
 Repository: CRAN
-Date/Publication: 2020-11-02 22:30:02 UTC
+Date/Publication: 2020-11-18 23:10:06 UTC
