@@ -1,4 +1,4 @@
-dff126ab75c5a8aaa38481a05fbffa36 *DESCRIPTION
+ffbd57c8ff28dca38688a5d183810b4e *DESCRIPTION
 2b77327f8c913929881236cc3f935869 *NAMESPACE
 160d1ef0551a201f24298a6ee50ee44d *R/AllClasses.R
 67ed7fd76480b479ab406571d7b0d258 *R/AllGenerics.R
@@ -54,7 +54,7 @@ d19e302d55b1112aade286eed1c1f17f *R/mcf.R
 e708a7061d3673b57034bb858a79c6ca *R/mtable-format-print.R
 35c1a9f5a1a9d5dae718351670e4f23b *R/mtable-manip.R
 3d5d732449d0704533dabee1dce9b387 *R/mtable-tools-format.R
-531f0210877baa0b2e843d643d4de0d3 *R/mtable.R
+f5bd8246517ea99b56274517018e71cd *R/mtable.R
 60380a2da6c562eb5037b1147e8ed362 *R/numeric-if-possible.R
 9e6dee040e97644b75700d0de685c290 *R/percent.R
 501dd024e5e594c70b67992aa7b45755 *R/percentages.R
@@ -100,20 +100,20 @@ bc70730d63f2e1bff76b128ee40ca497 *R/yz-getSummary-merMod.R
 b58bc49e2692e7557d38e5479276ae10 *R/yz-getSummary_expcoef.R
 14d08c2e584066ea3f68768e4016aac7 *R/zzz.R
 384d4da1e624e1f610faa005f569392a *build/vignette.rds
-9b91f330265bebb3dd7e3548e20883a7 *inst/ChangeLog
+f3797580ae7936b4e5d9719efd53e2a5 *inst/ChangeLog
 69a8a6b6640742bd0362fe107e52981c *inst/NEWS.Rd
 41637fb01a9545c5a26248e03217e449 *inst/anes/NES1948.ZIP
 89be272a4d69d221485c2f7a1d81eb4b *inst/doc/anes48.R
-3beccb779bb9db1329109d816e3f0ffc *inst/doc/anes48.Rmd
-aeaf20c6cd98409e92e1a64f1bcdc168 *inst/doc/anes48.html
+705c8f5442e690c6db9a210e0e389dd4 *inst/doc/anes48.Rmd
+791f2569c672d549adb309af2d76d4da *inst/doc/anes48.html
 be2a0dc08d9fe4e0566e4885e3c2eb7b *inst/doc/ftable-matrix.R
-5cb0a874850641fdba4b1119a95c2def *inst/doc/ftable-matrix.Rmd
+598517b43a7d9b0706f4e8ce1411e315 *inst/doc/ftable-matrix.Rmd
 6d4f6a7af3e50b6bb1ae4eccc0534aeb *inst/doc/ftable-matrix.html
 31d502628fec2137335c090140ba5890 *inst/doc/items.R
-5cdbad91778fd5aabfe53c012b365587 *inst/doc/items.Rmd
+9c102f7ca1bea8b4f85b600c2b1f222d *inst/doc/items.Rmd
 414608205a77f3fad4359ec14de0d6c6 *inst/doc/items.html
 712e73c086f2f4826e4a15be5bf3fcae *inst/doc/mtable-html.R
-9ed220d898ee60aaad2801be7c32135b *inst/doc/mtable-html.Rmd
+7252854b5796adbe1d07eca5805d3817 *inst/doc/mtable-html.Rmd
 f96ffe7a05c5b203e5557cac5f7f1f51 *inst/doc/mtable-html.html
 b99fbb1ab17d8624b63b989a410cdeba *inst/gles/gles2013work.RData
 da11e599cb33919107324228eec138ee *man/00memisc.Rd
@@ -201,7 +201,7 @@ ea7c2da6e4e542c5a43cc74572637941 *src/pspp-portableStream-for-R.c
 996e3421b2d4ab4c68021ca75faac530 *src/rofile.c
 03da5a3346e76f2ba5d692c370eb60a9 *src/rofile.h
 ef790853bb885876db73c5a502fc38f3 *src/update_data_frame.c
-3beccb779bb9db1329109d816e3f0ffc *vignettes/anes48.Rmd
-5cb0a874850641fdba4b1119a95c2def *vignettes/ftable-matrix.Rmd
-5cdbad91778fd5aabfe53c012b365587 *vignettes/items.Rmd
-9ed220d898ee60aaad2801be7c32135b *vignettes/mtable-html.Rmd
+705c8f5442e690c6db9a210e0e389dd4 *vignettes/anes48.Rmd
+598517b43a7d9b0706f4e8ce1411e315 *vignettes/ftable-matrix.Rmd
+9c102f7ca1bea8b4f85b600c2b1f222d *vignettes/items.Rmd
+7252854b5796adbe1d07eca5805d3817 *vignettes/mtable-html.Rmd
