@@ -8,6 +8,10 @@ knitr::opts_chunk$set(comment=NA,
                results="markup")
 ```
 
+---
+title: Analysing the American National Election Study of 1948 with 'memisc'
+---
+
 # Analysing the American National Election Study of 1948 with *memisc*
 
 ## Introduction
