@@ -409,7 +409,7 @@ nes1948.por &lt;- unzip(system.file(&quot;anes/NES1948.ZIP&quot;,package=&quot;m
   V480034A, V480034B</code></pre>
 <pre class="r"><code>print(nes1948)</code></pre>
 <pre><code>
-SPSS portable file &#39;/tmp/RtmpAXJX8Y/file13c435064a21/NES1948.POR&#39; 
+SPSS portable file &#39;/tmp/RtmpmGpSo5/file427b305f9116/NES1948.POR&#39; 
     with 67 variables and 662 observations</code></pre>
 <p>At this stage, the data are not loaded into the memory yet. But we can see which variables exist inside the data set:</p>
 <pre class="r"><code>names(nes1948)</code></pre>
